--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -401,6 +401,16 @@ function toggleMobileSearch() {
   }
 }
 
+function toggleDesktopSearch() {
+  const field = document.getElementById('desktopSearchField');
+  if(field.style.display === 'block'){
+    field.style.display = 'none';
+  } else {
+    field.style.display = 'block';
+    field.querySelector('input').focus();
+  }
+}
+
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -442,11 +452,16 @@ function toggleMobileSearch() {
         </div>
 
         <!-- Search -->
-        <div class="col-auto search-wrapper">
-          <form method="GET" action="{% url 'search' %}">
-            <input type="text" name="keyword" placeholder="Search..." class="form-control form-control-sm">
+        <!-- Desktop Search -->
+        <div class="col-auto search-wrapper" id="desktopSearchWrapper">
+          <button class="btn search-toggle" onclick="toggleDesktopSearch()">
+            <i class="fa fa-search"></i>
+          </button>
+          <form method="GET" action="{% url 'search' %}" class="search-field" id="desktopSearchField">
+            <input type="text" name="keyword" placeholder="Search...">
           </form>
         </div>
+
 
         <!-- User / Cart / Mode -->
         <div class="col-auto ml-auto d-flex align-items-center">
