product detail updated

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -168,11 +168,11 @@ body.dark-mode table.table-shopping-cart td small {
 }
 
 /* ================= MOBILE MENU IN DARK MODE ================= */
-
+body.dark-mode .mobile-header .navbar,
 body.dark-mode .mobile-header .dropdown-menu,
 body.dark-mode .mobile-header .collapse {
-    background-color: #fff !important; /* keep menu white */
-    color: #000 !important;            /* text black */
+    background-color: #000 !important; /* keep menu white */
+    color: #fff !important;            /* text black */
 }
 
 body.dark-mode .mobile-header .nav-link,
