--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -182,6 +182,18 @@ body.dark-mode .category-link1 {
 body.dark-mode .category-link1:hover {
     color: #7a8280 !important;
 }
+
+/* Dark mode store header */
+body.dark-mode .section-pagetop .container {
+    background-color: #000 !important;  /* black background */
+    padding: 1rem 2rem;
+    border-radius: 8px; /* optional: rounded corners */
+}
+
+body.dark-mode .section-pagetop .title-page {
+    color: #fff !important;  /* white text */
+}
+
 </style>
 
 <!-- ========================= SECTION PAGETOP ========================= -->
