--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -194,6 +194,16 @@ body.dark-mode .section-pagetop .title-page {
     color: #fff !important;  /* white text */
 }
 
+/* Dark mode product text */
+body.dark-mode .card-product-grid .title {
+    color: #fff !important; /* product name white */
+}
+
+body.dark-mode .card-product-grid .price-wrap .price {
+    color: #fff !important; /* price white */
+}
+
+
 </style>
 
 <!-- ========================= SECTION PAGETOP ========================= -->
