product detail updated

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -358,6 +358,12 @@ body.dark-mode table.table-shopping-cart td small {
   }
 }
 
+.brand-wrap::after,
+.navbar-brand.logo-link::after {
+    display: none !important;
+    content: none !important;
+}
+
 
 </style>
 
