--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -699,7 +699,7 @@ function toggleDesktopSearch() {
           {% endif %}
           <a href="{% url 'cart' %}" class="position-relative">
             <i class="fa fa-shopping-cart"></i>
-            <span class="badge badge-danger badge-pill position-absolute" style="top:-5px; right:-8px;">
+            <span class="badge badge-danger badge-pill position-absolute" style="top:-5px; right:-8px; padding-left: 50px;">
               {{ cart_count }}
             </span>
           </a>
