product detail updated

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -698,8 +698,8 @@ function toggleDesktopSearch() {
             <a href="{% url 'login' %}"><i class="fa fa-sign-in-alt"></i></a>
           {% endif %}
           <a href="{% url 'cart' %}" class="position-relative">
-            <i class="fa fa-shopping-cart"></i>
-            <span class="badge badge-danger badge-pill position-absolute" style="top:-5px; right:-8px; padding-left: 50px;">
+            <i class="fa fa-shopping-cart" style="margin-left: 50px;"></i>
+            <span class="badge badge-danger badge-pill position-absolute" style="top:-5px; right:-8px; ">
               {{ cart_count }}
             </span>
           </a>
