product detail updated

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -473,6 +473,15 @@ body.dark-mode .mobile-topbar {
   white-space: nowrap;
 }
 
+.mobile-header .d-flex.align-items-center.gap-1 {
+    justify-content: flex-start !important;
+    margin-left: 0 !important;
+    padding-left: 0 !important;
+}
+
+.mobile-header .d-flex.align-items-center.gap-1 > * {
+    margin-right: 4px; /* optional, tighter spacing */
+}
 
 </style>
 
