product detail updated

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -513,6 +513,10 @@ body.dark-mode .mobile-topbar {
     width: 80px !important;  /* optional, adjust width */
   }
 }
+.class{
+  padding-right: 30px;
+  padding-left: 80px;
+}
 
 </style>
 
@@ -732,6 +736,9 @@ function toggleDesktopSearch() {
             {% endfor %}
           </ul>
         </div>
+    <div class="class">
+
+    </div>
 
         <!-- Inline Search -->
         <div class="d-flex align-items-center search-wrapper" id="mobileSearchWrapper">
