product detail updated

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -18,6 +18,9 @@
   --hover-color: #000;
 }
 
+html, body {
+  overflow-x: hidden;
+}
 /* ================= BODY ================= */
 body {
   background-color: var(--body-bg);
