--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -560,13 +560,13 @@ body.dark-mode .mobile-topbar {
 }
 
 #desktopSearchField input::placeholder {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(160, 54, 54, 0.7);
 }
 
 /* Focus effect */
 #desktopSearchField input:focus {
   border: 1px solid rgba(255, 255, 255, 0.6);
-  background: rgba(255, 255, 255, 0.25);
+  background: rgba(161, 32, 32, 0.25);
   outline: none;
 }
 
@@ -574,7 +574,7 @@ body.dark-mode .mobile-topbar {
 .mobile-glass-search {
   display: none;
   position: absolute;
-  right: 100%; /* or adjust to left of icon */
+   /* or adjust to left of icon */
   top: 50%;
   transform: translateY(-50%);
   width: 120px;
